<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBarCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@drawable/background_tool2"/>
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topLayout">

            <TextView
                android:id="@+id/txtCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragmentHome_marginLeft"
                android:layout_marginTop="@dimen/textView_categories_marginTop"
                android:text="@string/cart_item_title"
                android:textColor="#0FA956"
                android:textSize="@dimen/textView_categories_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragmentHome_marginLeft"
                android:layout_marginTop="@dimen/txtTopProduct_home_marginTop"
                android:layout_marginEnd="@dimen/fragment_marginRight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCategories" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainLayout"
            android:layout_alignParentBottom="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/txtTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/btnAddToCart"
                    android:layout_alignStart="@id/btnAddToCart"
                    android:layout_marginTop="@dimen/textView_categories_marginTop"
                    android:layout_marginBottom="@dimen/textView_totalPrice_marginTop"
                    android:text="@string/cart_totalprice_title"
                    android:textColor="#0FA956"
                    android:textSize="@dimen/textView_categories_size"
                    app:layout_constraintBottom_toTopOf="@id/btnAddToCart"
                    app:layout_constraintEnd_toStartOf="@id/txtPrice"
                    app:layout_constraintStart_toStartOf="@id/btnAddToCart"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/btnAddToCart"
                    android:layout_alignEnd="@id/btnAddToCart"
                    android:layout_marginTop="@dimen/textView_categories_marginTop"
                    android:layout_marginBottom="@dimen/textView_totalPrice_marginTop"
                    android:text="@string/cart_totalprice_title"
                    android:textColor="#0FA956"
                    android:textSize="@dimen/textView_categories_size"
                    app:layout_constraintBottom_toTopOf="@id/btnAddToCart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/txtTotalPrice"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.example.hoangcv2_assiagnment.customview.ButtonCustomView
                    android:id="@+id/btnAddToCart"
                    android:layout_width="@dimen/customview_home_width"
                    android:layout_height="@dimen/customview_home_height"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/background_text"
                    app:Text_Color="#FFFFFF"
                    app:Title="@string/cart_button_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>