<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/topLayout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBarHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/background_tool2"
                    app:menu="@menu/menu_shopping" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchViewHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fragmentHome_marginLeft"
                    android:layout_marginTop="@dimen/searchView_home_marginTop"
                    android:layout_marginEnd="@dimen/searchView_home_marginRight"
                    android:background="@drawable/background_tool" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/topLayout">

                <TextView
                    android:id="@+id/txtCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fragmentHome_marginLeft"
                    android:layout_marginTop="@dimen/textView_categories_marginTop"
                    android:text="@string/textView_categories"
                    android:textColor="#0FA956"
                    android:textSize="@dimen/textView_categories_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fragmentHome_marginLeft"
                    android:layout_marginTop="@dimen/textView_categories_marginTop"
                    android:layout_marginEnd="@dimen/fragment_marginRight"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtCategories" />

                <TextView
                    android:id="@+id/txtTopProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fragmentHome_marginLeft"
                    android:layout_marginTop="@dimen/txtTopProduct_home_marginTop"
                    android:text="@string/textView_topproduct"
                    android:textColor="#0FA956"
                    android:textSize="@dimen/textView_topproduct_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerViewItem" />

                <TextView
                    android:id="@+id/txtSeeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/txtTopProduct_home_marginTop"
                    android:layout_marginEnd="@dimen/searchView_home_marginRight"
                    android:text="@string/textView_seeall"
                    android:textSize="@dimen/textView_seeall_size"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerViewItem" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTopProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fragmentHome_marginLeft"
                    android:layout_marginTop="@dimen/textView_categories_marginTop"
                    android:layout_marginEnd="@dimen/fragment_marginRight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtTopProduct" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainLayout"
                android:layout_alignParentBottom="true">

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottomNavigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/textView_categories_marginTop"
                    android:background="@drawable/background_tool2"
                    app:menu="@menu/menu_navigation" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
